// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@Value(options: ValueOptions) Value with Schema all value in config and respect Validator 1`] = `
Conf {
  "hostname": "localhost",
  "rootPath": "/",
}
`;

exports[`@Value(options: ValueOptions) Value with Schema bad format without throw error 1`] = `
Conf {
  "rootPath": null,
}
`;

exports[`@Value(options: ValueOptions) Value with Schema default in joi 1`] = `
Conf {
  "hostname": "localhost",
  "port": 8088,
  "rootPath": "/",
}
`;

exports[`@Value(options: ValueOptions) Value with Schema default value in constructor 1`] = `
Conf {
  "hostname": "localhost",
  "port": 8080,
  "rootPath": "/",
}
`;

exports[`@Value(options: ValueOptions) Value with Schema default value in property 1`] = `
Conf {
  "hostname": "localhost",
  "port": 3000,
  "rootPath": "/",
}
`;

exports[`@Value(path: string) Value without others options all value in config 1`] = `
Conf {
  "hostname": "localhost",
  "rootPath": "/",
}
`;

exports[`@Value(path: string) Value without others options default value and optional bean 1`] = `
Conf {
  "hostname": "localhost",
  "rootPath": "/",
}
`;

exports[`@Value(path: string) Value without others options default value in constructor 1`] = `
Conf {
  "hostname": "localhost",
  "port": 8080,
  "rootPath": "/",
}
`;

exports[`@Value(path: string) Value without others options default value in constructor and property 1`] = `
Conf {
  "hostname": "localhost",
  "port": 8080,
  "rootPath": "/",
}
`;

exports[`@Value(path: string) Value without others options default value in other bean 1`] = `
Conf {
  "hostname": "localhost",
  "port": 8081,
  "rootPath": "/",
}
`;

exports[`@Value(path: string) Value without others options default value in property 1`] = `
Conf {
  "hostname": "localhost",
  "port": 3000,
  "rootPath": "/",
}
`;

exports[`@Value(path: string) Value without others options with value undefined 1`] = `
Conf {
  "hostname": "localhost",
  "lol": undefined,
  "port": 3000,
  "rootPath": "/",
}
`;

exports[`@Value(path: string, schema: Joi.Schema) Value with Schema all value in config and respect Validator 1`] = `
Conf {
  "hostname": "localhost",
  "rootPath": "/",
}
`;

exports[`@Value(path: string, schema: Joi.Schema) Value with Schema default in joi 1`] = `
Conf {
  "hostname": "localhost",
  "port": 8088,
  "rootPath": "/",
}
`;

exports[`@Value(path: string, schema: Joi.Schema) Value with Schema default value in constructor 1`] = `
Conf {
  "hostname": "localhost",
  "port": 8080,
  "rootPath": "/",
}
`;

exports[`@Value(path: string, schema: Joi.Schema) Value with Schema default value in property 1`] = `
Conf {
  "hostname": "localhost",
  "port": 3000,
  "rootPath": "/",
}
`;
